--- a/src/app/modules/home/components/dashboard/dashboard.component.scss
+++ b/src/app/modules/home/components/dashboard/dashboard.component.scss
@@ -13,10 +13,9 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-@import '../../../../../scss/constants';
+@import "../../../../../scss/constants";
 
 :host {
-
   .tb-progress-cover {
     position: absolute;
     top: 0;
