--- a/src/app/modules/home/components/widget/lib/home-page/getting-started-completed-dialog.component.scss
+++ b/src/app/modules/home/components/widget/lib/home-page/getting-started-completed-dialog.component.scss
@@ -16,7 +16,7 @@
 .tb-getting-started-completed-dialog {
   .mat-mdc-dialog-container .mdc-dialog__surface {
     border-radius: 8px;
-    background-image: url(/assets/home/greetings_bg.svg);
+    background-image: url(../../../../../../../assets/home/greetings_bg.svg);
     background-repeat: no-repeat;
   }
 
