--- a/src/app/modules/home/components/widget/lib/home-page/getting-started-widget.component.scss
+++ b/src/app/modules/home/components/widget/lib/home-page/getting-started-widget.component.scss
@@ -169,9 +169,9 @@
                 width: 18px;
                 height: 18px;
                 background: #165dff;
-                -webkit-mask-image: url(/assets/copy-code-icon.svg);
+                -webkit-mask-image: url(../../../../../../../assets/copy-code-icon.svg);
                 -webkit-mask-repeat: no-repeat;
-                mask-image: url(/assets/copy-code-icon.svg);
+                mask-image: url(../../../../../../../assets/copy-code-icon.svg);
                 mask-repeat: no-repeat;
               }
             }
