--- a/src/app/modules/home/components/widget/lib/home-page/recent-dashboards-widget.component.scss
+++ b/src/app/modules/home/components/widget/lib/home-page/recent-dashboards-widget.component.scss
@@ -48,9 +48,9 @@
       right: 0;
       bottom: 0;
       background: #165dff;
-      -webkit-mask-image: url(/assets/home/no_data_bg.svg);
+      -webkit-mask-image: url(../../../../../../../assets/home/no_data_bg.svg);
       -webkit-mask-repeat: no-repeat;
-      mask-image: url(/assets/home/no_data_bg.svg);
+      mask-image: url(../../../../../../../assets/home/no_data_bg.svg);
       mask-repeat: no-repeat;
     }
   }
