--- a/src/app/modules/login/pages/login/reset-password-request.component.scss
+++ b/src/app/modules/login/pages/login/reset-password-request.component.scss
@@ -19,7 +19,7 @@
   display: flex;
   flex: 1 1 0;
   .tb-request-password-reset-content {
-    background-color: #eee;
+    background-color: #f7f8fa;
     .tb-request-password-reset-card {
       .mat-mdc-card {
         background-image: linear-gradient(to left, #428ffb 0%, #385de2 100%);
