--- a/src/app/modules/login/pages/login/reset-password.component.scss
+++ b/src/app/modules/login/pages/login/reset-password.component.scss
@@ -19,7 +19,7 @@
   display: flex;
   flex: 1 1 0;
   .tb-reset-password-content {
-    background-color: #eee;
+    background-color: #f7f8fa;
     .tb-reset-password-card {
       @media #{$mat-gt-sm} {
         width: 450px !important;
