--- a/src/app/modules/login/pages/login/two-factor-auth-login.component.scss
+++ b/src/app/modules/login/pages/login/two-factor-auth-login.component.scss
@@ -20,7 +20,7 @@
   flex: 1 1 0;
 
   .tb-two-factor-auth-login-content {
-    background-color: #eee;
+    background-color: #f7f8fa;
 
     .tb-two-factor-auth-login-card {
       padding: 48px 48px 48px 16px;
