--- a/src/app/modules/home/components/dashboard/dashboard.component.html
+++ b/src/app/modules/home/components/dashboard/dashboard.component.html
@@ -15,55 +15,86 @@
     limitations under the License.
 
 -->
-<div fxFlex fxLayout="column" class="tb-progress-cover" fxLayoutAlign="center center"
-     [ngStyle]="dashboardStyle"
-     [style.backgroundImage]="backgroundImage"
-     [fxShow]="(isLoading$ | async) && !ignoreLoading && !isEdit">
-  <mat-spinner color="warn" mode="indeterminate" diameter="100">
-  </mat-spinner>
+<div
+  fxFlex
+  fxLayout="column"
+  class="tb-progress-cover"
+  fxLayoutAlign="center center"
+  [ngStyle]="dashboardStyle"
+  [style.backgroundImage]="backgroundImage"
+  [fxShow]="(isLoading$ | async) && !ignoreLoading && !isEdit"
+>
+  <mat-spinner color="warn" mode="indeterminate" diameter="100"> </mat-spinner>
 </div>
-<div id="gridster-parent"
-     fxFlex class="tb-dashboard-content layout-wrap" [ngClass]="{'autofill-height': isAutofillHeight()}"
-                (contextmenu)="openDashboardContextMenu($event)">
-  <div #dashboardMenuTrigger="matMenuTrigger" style="visibility: hidden; position: fixed"
-       [style.left]="dashboardMenuPosition.x"
-       [style.top]="dashboardMenuPosition.y"
-       [matMenuTriggerFor]="dashboardMenu">
-  </div>
+<div
+  id="gridster-parent"
+  fxFlex
+  class="tb-dashboard-content layout-wrap"
+  [ngClass]="{ 'autofill-height': isAutofillHeight() }"
+  (contextmenu)="openDashboardContextMenu($event)"
+>
+  <div
+    #dashboardMenuTrigger="matMenuTrigger"
+    style="visibility: hidden; position: fixed"
+    [style.left]="dashboardMenuPosition.x"
+    [style.top]="dashboardMenuPosition.y"
+    [matMenuTriggerFor]="dashboardMenu"
+  ></div>
   <mat-menu #dashboardMenu="matMenu">
     <ng-template matMenuContent let-items="items">
       <div class="tb-dashboard-context-menu-items">
-        <button mat-menu-item *ngFor="let item of items;"
-                [disabled]="!item.enabled"
-                (click)="item.action(dashboardContextMenuEvent)">
-          <span *ngIf="item.shortcut" class="tb-alt-text"> {{ item.shortcut | keyboardShortcut }}</span>
-          <mat-icon *ngIf="item.icon">{{item.icon}}</mat-icon>
-          <span translate>{{item.value}}</span>
+        <button
+          mat-menu-item
+          *ngFor="let item of items"
+          [disabled]="!item.enabled"
+          (click)="item.action(dashboardContextMenuEvent)"
+        >
+          <span *ngIf="item.shortcut" class="tb-alt-text">
+            {{ item.shortcut | keyboardShortcut }}</span
+          >
+          <mat-icon *ngIf="item.icon">{{ item.icon }}</mat-icon>
+          <span translate>{{ item.value }}</span>
         </button>
       </div>
     </ng-template>
   </mat-menu>
-  <div #widgetMenuTrigger="matMenuTrigger" style="visibility: hidden; position: fixed"
-       [style.left]="widgetMenuPosition.x"
-       [style.top]="widgetMenuPosition.y"
-       [matMenuTriggerFor]="widgetMenu">
-  </div>
+  <div
+    #widgetMenuTrigger="matMenuTrigger"
+    style="visibility: hidden; position: fixed"
+    [style.left]="widgetMenuPosition.x"
+    [style.top]="widgetMenuPosition.y"
+    [matMenuTriggerFor]="widgetMenu"
+  ></div>
   <mat-menu #widgetMenu="matMenu">
     <ng-template matMenuContent let-items="items" let-widget="widget">
       <div class="tb-dashboard-context-menu-items">
-        <button mat-menu-item *ngFor="let item of items;"
-                [disabled]="!item.enabled"
-                (click)="item.action(widgetContextMenuEvent, widget)">
-          <span *ngIf="item.shortcut" class="tb-alt-text"> {{ item.shortcut | keyboardShortcut }}</span>
-          <mat-icon *ngIf="item.icon">{{item.icon}}</mat-icon>
-          <span translate>{{item.value}}</span>
+        <button
+          mat-menu-item
+          *ngFor="let item of items"
+          [disabled]="!item.enabled"
+          (click)="item.action(widgetContextMenuEvent, widget)"
+        >
+          <span *ngIf="item.shortcut" class="tb-alt-text">
+            {{ item.shortcut | keyboardShortcut }}</span
+          >
+          <mat-icon *ngIf="item.icon">{{ item.icon }}</mat-icon>
+          <span translate>{{ item.value }}</span>
         </button>
       </div>
     </ng-template>
   </mat-menu>
-  <div [ngClass]="dashboardClass" id="gridster-background" style="height: auto; min-height: 100%; display: inline;">
+  <div
+    [ngClass]="dashboardClass"
+    id="gridster-background"
+    style="height: auto; min-height: 100%; display: inline"
+  >
     <gridster #gridster id="gridster-child" [options]="gridsterOpts">
-      <gridster-item #gridsterItem [item]="widget" [ngClass]="{'tb-noselect': isEdit}" *ngFor="let widget of dashboardWidgets">
+      <gridster-item
+        #gridsterItem
+        [item]="widget"
+        [ngClass]="{ 'tb-noselect': isEdit }"
+        *ngFor="let widget of dashboardWidgets"
+      >
         <tb-widget-container
           [gridsterItem]="gridsterItem"
           [widget]="widget"
@@ -77,7 +108,8 @@
           [isRemoveActionEnabled]="isRemoveActionEnabled"
           [disableWidgetInteraction]="disableWidgetInteraction"
           (widgetFullscreenChanged)="onWidgetFullscreenChanged($event)"
-          (widgetComponentAction)="onWidgetComponentAction($event, widget)">
+          (widgetComponentAction)="onWidgetComponentAction($event, widget)"
+        >
         </tb-widget-container>
       </gridster-item>
     </gridster>
