--- a/src/app/modules/home/components/widget/lib/home-page/home-page-widget.scss
+++ b/src/app/modules/home/components/widget/lib/home-page/home-page-widget.scss
@@ -90,11 +90,11 @@
       right: 0;
       bottom: 0;
       background: #165dff;
-      -webkit-mask-image: url(/assets/home/no_data_folder_bg.svg);
+      -webkit-mask-image: url(../../../../../../../assets/home/no_data_folder_bg.svg);
       -webkit-mask-repeat: no-repeat;
       -webkit-mask-size: contain;
       -webkit-mask-position: center;
-      mask-image: url(/assets/home/no_data_folder_bg.svg);
+      mask-image: url(../../../../../../../assets/home/no_data_folder_bg.svg);
       mask-repeat: no-repeat;
       mask-size: contain;
       mask-position: center;
