--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -16,15 +16,7 @@
 
 -->
 <mat-sidenav-container>
-  <mat-sidenav
-    *ngIf="!userAgent.includes('Electron')"
-    #sidenav
-    class="tb-site-sidenav mat-elevation-z2"
-    [disableClose]="sidenavOpened"
-    (click)="sidenavClicked()"
-    [mode]="sidenavMode"
-    [opened]="sidenavOpened && !forceFullscreen"
-  >
+  <mat-sidenav *ngIf="!userAgent.includes('Electron')" #sidenav class="tb-site-sidenav mat-elevation-z2" [disableClose]="sidenavOpened" (click)="sidenavClicked()" [mode]="sidenavMode" [opened]="sidenavOpened && !forceFullscreen">
     <header class="tb-nav-header">
       <mat-toolbar color="primary" class="tb-nav-header-toolbar">
         <div fxFlex="auto" fxLayout="column">
@@ -33,95 +25,45 @@
         </div>
       </mat-toolbar>
     </header>
-    <mat-toolbar
-      color="primary"
-      fxFlex="0%"
-      class="tb-side-menu-toolbar"
-      fxLayout="column"
-      role="navigation"
-    >
+    <mat-toolbar color="primary" fxFlex="0%" class="tb-side-menu-toolbar" fxLayout="column" role="navigation">
       <tb-side-menu></tb-side-menu>
     </mat-toolbar>
   </mat-sidenav>
   <mat-sidenav-content>
     <div fxLayout="column" role="main" style="height: 100%">
-      <mat-toolbar
-        *ngIf="!userAgent.includes('Electron')"
-        fxLayout="row"
-        color="primary"
-        class="tb-primary-toolbar"
-      >
-        <button
-          [fxShow]="!forceFullscreen"
-          mat-icon-button
-          id="main"
-          [ngClass]="{ 'tb-invisible': displaySearchMode() }"
-          fxHide.gt-sm
-          (click)="sidenav.toggle()"
-        >
+      <mat-toolbar *ngIf="!userAgent.includes('Electron')" fxLayout="row" color="primary" class="tb-primary-toolbar">
+        <button [fxShow]="!forceFullscreen" mat-icon-button id="main" [ngClass]="{ 'tb-invisible': displaySearchMode() }" fxHide.gt-sm (click)="sidenav.toggle()">
           <mat-icon class="material-icons">menu</mat-icon>
         </button>
-        <button
-          [fxShow]="forceFullscreen"
-          mat-icon-button
-          [ngClass]="{ 'tb-invisible': displaySearchMode() }"
-          (click)="goBack()"
-        >
+        <button [fxShow]="forceFullscreen" mat-icon-button [ngClass]="{ 'tb-invisible': displaySearchMode() }" (click)="goBack()">
           <mat-icon class="material-icons">arrow_back</mat-icon>
         </button>
-        <button
-          mat-icon-button
-          [ngClass]="{ 'tb-invisible': !displaySearchMode() }"
-          (click)="closeSearch()"
-        >
+        <button mat-icon-button [ngClass]="{ 'tb-invisible': !displaySearchMode() }" (click)="closeSearch()">
           <mat-icon class="material-icons">arrow_back</mat-icon>
         </button>
-        <!-- <tb-breadcrumb [fxShow]="!displaySearchMode()"
-             fxFlex class="mat-toolbar-tools">
+        <!-- 面包屑 -->
+        <!-- <tb-breadcrumb [fxShow]="!displaySearchMode()" fxFlex class="mat-toolbar-tools">
         </tb-breadcrumb> -->
-        <div
-          [fxShow]="displaySearchMode()"
-          fxFlex
-          fxLayout="row"
-          class="tb-dark"
-        >
+        <div [fxShow]="displaySearchMode()" fxFlex fxLayout="row" class="tb-dark">
           <mat-form-field fxFlex class="tb-appearance-transparent">
-            <input
-              #searchInput
-              matInput
-              [(ngModel)]="searchText"
-              placeholder="{{ 'common.enter-search' | translate }}"
-            />
+            <input #searchInput matInput [(ngModel)]="searchText" placeholder="{{ 'common.enter-search' | translate }}" />
           </mat-form-field>
         </div>
         <button [fxShow]="searchEnabled" mat-icon-button (click)="openSearch()">
           <mat-icon class="material-icons">search</mat-icon>
         </button>
-        <button
-          *ngIf="fullscreenEnabled"
-          [fxShow]="!displaySearchMode()"
-          mat-icon-button
-          fxHide.lt-md
-          (click)="toggleFullscreen()"
-        >
+        <button *ngIf="fullscreenEnabled" [fxShow]="!displaySearchMode()" mat-icon-button fxHide.lt-md (click)="toggleFullscreen()">
           <mat-icon class="material-icons">{{
             isFullscreen() ? "fullscreen_exit" : "fullscreen"
-          }}</mat-icon>
+            }}</mat-icon>
         </button>
         <tb-notification-bell></tb-notification-bell>
         <tb-user-menu [displayUserInfo]="!displaySearchMode()"></tb-user-menu>
       </mat-toolbar>
-      <mat-progress-bar
-        color="warn"
-        style="z-index: 10; margin-bottom: -4px; width: 100%"
-        mode="indeterminate"
-        *ngIf="!hideLoadingBar && (isLoading$ | async)"
-      >
+      <mat-progress-bar color="warn" style="z-index: 10; margin-bottom: -4px; width: 100%" mode="indeterminate" *ngIf="!hideLoadingBar && (isLoading$ | async)">
       </mat-progress-bar>
       <div fxFlex fxLayout="column" tb-toast class="tb-main-content">
-        <router-outlet
-          (activate)="activeComponentChanged($event)"
-        ></router-outlet>
+        <router-outlet (activate)="activeComponentChanged($event)"></router-outlet>
       </div>
     </div>
   </mat-sidenav-content>
