--- a/src/app/modules/login/pages/login/create-password.component.scss
+++ b/src/app/modules/login/pages/login/create-password.component.scss
@@ -13,13 +13,13 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-@import '../../../../../scss/constants';
+@import "../../../../../scss/constants";
 
 :host {
   display: flex;
   flex: 1 1 0;
   .tb-create-password-content {
-    background-color: #eee;
+    background-color: #f7f8fa;
     .tb-create-password-card {
       @media #{$mat-gt-xs} {
         width: 450px !important;
